# deep_learning

./: .gitignore  HW5.ipynb  Week1-LBD-tensors.ipynb  codility.ipynb  convolution.md  model_config.yaml  notes.md  pyproject.toml  test_2b.ipynb  train_config.yaml
HW1/: HW1.ipynb  mlp_and.pth  mlp_or.pth  mlp_xnor.pth  mlp_xor.pth
HW10/: HW10.ipynb  model_config.yaml  train_config.yaml
HW11/: HW11.ipynb
HW12/: HW12.ipynb
HW2/: HW2.ipynb  model_config.yaml  state_dict.pth  train_config.yaml
HW3/: HW3.ipynb
HW4/: HW4.ipynb
HW4/results/: HW4.ipynb  experiments.xlsx
HW4/results/00/: model_config.yaml  results.pkl  train_config.yaml
HW4/results/01/: results.pkl  train_config.yaml
HW4/results/02/: model_config.yaml  results.pkl  train_config.yaml
HW4/results/03/: results.pkl  train_config.yaml
HW4/results/04/: model_config.yaml  results.pkl  train_config.yaml
HW4/results/05/: model_config.yaml  results.pkl  train_config.yaml
HW5/: HW5.ipynb  model_config.yaml  state_dict.pt  train_config.yaml
HW6/: HW6.ipynb  state_dict.pt  train_config.yaml
HW7/: HW7.ipynb  model_config.yaml  train_config.yaml
HW8/: HW8.ipynb  discriminator_config.yaml  generator_config.yaml  train_config.yaml
HW9/: HW9.ipynb  model_config.yaml  train_config.yaml
recitations/: Week2-training.ipynb  Week3-regularization.ipynb  Week4-CNN.ipynb  Week5-GNN.ipynb  Week6-RNN.ipynb
